# vitric

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  SECURITY.md  _GAME_DONE.txt  engine_audit_report.html  llms.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
.superpowers/sdd/: progress.md  review-checklist.md  task-1-brief.md  task-1-report.md  task-1-review.diff  task-10-report.md  task-2-brief.md  task-2-report.md  task-2-review.diff  task-3-brief.md  task-3-report.md  task-3-review-package.md  task-3-review.md  task-4-brief.md  task-4-report.md  task-4-review-package.md  task-4-review.md  task-5-brief.md  task-5-report.md  task-5-review-package.md  task-5-review.md  task-6-brief.md  task-6-report.md  task-6-review.diff  task-7-brief.md  task-7-report.md  task-7-review.diff  task-8-brief.md  task-8-report.md  task-8-review.diff  task-9-brief.md  task-9-report.md
_engine_probe/: probe.txt
crates/vitric-cli/: Cargo.toml
crates/vitric-cli/src/: assets_cmd.rs  audio.rs  balance.rs  bc7.rs  bundle.rs  frames.rs  gate.rs  gpu.rs  lib.rs  llm.rs  main.rs  normals.rs  playtest_llm.rs  runtime.rs  team.rs  turf.rs  window.rs
crates/vitric-cli/tests/: animation.rs  assets_harmonize.rs  balance.rs  book.rs  bundle.rs  cave_gen.rs  check_image_refs.rs  combat.rs  companions.rs  e2e.rs  examples_check.rs  faction.rs  frame_anim_demo.rs  frames.rs  frames_check.rs  gate.rs  glow.rs  hot_reload.rs  jump.rs  llm_e2e.rs  mouse.rs  pacing.rs  particles.rs  playtest.rs  playtest_guided.rs  playtest_llm.rs  playtest_lookahead.rs  playtest_manifest_endings.rs  playtest_numeric.rs  playtest_seed.rs  playtest_seed_reply.rs  playtest_swarm.rs  region.rs  research.rs  saves.rs  scenes.rs  seasons.rs  sequence.rs  sequence_check.rs  snapshot.rs  (+5 more)
crates/vitric-cli/tests/fixtures/quest/: schema.json  vitric.json
crates/vitric-cli/tests/fixtures/quest/rules/: game.json
crates/vitric-cli/tests/fixtures/quest/scenes/: main.json
crates/vitric-control/: Cargo.toml
crates/vitric-control/src/: dispatcher.rs  lib.rs  saves.rs  server.rs
crates/vitric-data/: Cargo.toml
crates/vitric-data/src/: error.rs  lib.rs  project.rs  scene.rs  schema.rs  sequence.rs  theme.rs  ui_check.rs
crates/vitric-ecs/: Cargo.toml
crates/vitric-ecs/src/: delta.rs  entity.rs  error.rs  hash.rs  lib.rs  spatial.rs  world.rs
crates/vitric-playtest/: Cargo.toml
crates/vitric-playtest/src/: config.rs  html.rs  lib.rs  llm_agent.rs  report.rs  scene_view.rs  seed.rs  session.rs  strategy.rs  swarm.rs
crates/vitric-playtest/tests/fixtures/branching/: schema.json  vitric.json
crates/vitric-playtest/tests/fixtures/branching/rules/: game.json
crates/vitric-playtest/tests/fixtures/branching/scenes/: main.json
crates/vitric-playtest/tests/fixtures/collapse/: schema.json  vitric.json
crates/vitric-playtest/tests/fixtures/collapse/rules/: game.json
crates/vitric-playtest/tests/fixtures/collapse/scenes/: main.json
crates/vitric-playtest/tests/fixtures/dead-action/: schema.json  vitric.json
crates/vitric-playtest/tests/fixtures/dead-action/rules/: game.json
crates/vitric-playtest/tests/fixtures/dead-action/scenes/: main.json
crates/vitric-playtest/tests/fixtures/difficulty/: schema.json  vitric.json
crates/vitric-playtest/tests/fixtures/difficulty/rules/: game.json
crates/vitric-playtest/tests/fixtures/difficulty/scenes/: main.json
crates/vitric-playtest/tests/fixtures/gate-softlock/: schema.json  vitric.json
crates/vitric-playtest/tests/fixtures/gate-softlock/qa/: clear.json
crates/vitric-playtest/tests/fixtures/gate-softlock/rules/: game.json
crates/vitric-playtest/tests/fixtures/guided/: playtest.json  schema.json  vitric.json
crates/vitric-playtest/tests/fixtures/guided/rules/: game.json
crates/vitric-playtest/tests/fixtures/guided/scenes/: main.json
crates/vitric-playtest/tests/fixtures/nav/: playtest.json  schema.json  vitric.json
crates/vitric-playtest/tests/fixtures/nav/rules/: game.json
crates/vitric-playtest/tests/fixtures/nav/scenes/: main.json
crates/vitric-playtest/tests/fixtures/reply-gated/: schema.json  vitric.json
crates/vitric-playtest/tests/fixtures/reply-gated/rules/: game.json
crates/vitric-playtest/tests/fixtures/reply-gated/scenes/: main.json
crates/vitric-playtest/tests/fixtures/runaway/: schema.json  vitric.json
crates/vitric-playtest/tests/fixtures/runaway/rules/: game.json
crates/vitric-playtest/tests/fixtures/runaway/scenes/: main.json
crates/vitric-playtest/tests/fixtures/softlock/: schema.json  vitric.json
crates/vitric-playtest/tests/fixtures/softlock/rules/: game.json
crates/vitric-playtest/tests/fixtures/softlock/scenes/: main.json
crates/vitric-playtest/tests/fixtures/unbeatable/: schema.json  vitric.json
crates/vitric-playtest/tests/fixtures/unbeatable/rules/: game.json
crates/vitric-playtest/tests/fixtures/unbeatable/scenes/: main.json
crates/vitric-playtest/tests/fixtures/winnable/: schema.json  vitric.json
crates/vitric-playtest/tests/fixtures/winnable/rules/: game.json
crates/vitric-playtest/tests/fixtures/winnable/scenes/: main.json
crates/vitric-render/: Cargo.toml
crates/vitric-render/src/: assets.rs  font.rs  lib.rs  ui.rs  ui_interact.rs
crates/vitric-rules/: Cargo.toml
crates/vitric-rules/src/: engine.rs  lib.rs  model.rs
crates/vitric-script/: Cargo.toml
crates/vitric-script/src/: lib.rs  prelude.js
crates/vitric-sim/: Cargo.toml
crates/vitric-sim/src/: lib.rs  pcg.rs  recording.rs  sim.rs  tween.rs
demos/lighthouse/: README.md  playtest.json  schema.json  vitric.json
docs/: AI原生游戏引擎-设计稿.md  CODE_WIKI.md  agent-guide.en.md  agent-guide.md  art-pipeline.md  design-agent-playtest.md  design-frame-animation.md  design-tween-cutscene.md  design-tween-sequence.md  design-ui.md  errors.md  plan.md  team-playbook.md
mcp/: index.js  package-lock.json  package.json
scripts/: build_replay.py  mcp-smoke.mjs
team/: README.md
(+224 files in other folders)
