[workspace]
resolver = "2"
members = [
    "crates/vitric-ecs",
    "crates/vitric-data",
    "crates/vitric-sim",
    "crates/vitric-rules",
    "crates/vitric-script",
    "crates/vitric-control",
    "crates/vitric-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/BlackBearCC/vitric"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
