[workspace]
resolver = "2"
members = [
    "crates/vitric-ecs",
    "crates/vitric-data",
    "crates/vitric-sim",
    "crates/vitric-rules",
    "crates/vitric-script",
    "crates/vitric-control",
    "crates/vitric-render",
    "crates/vitric-playtest",
    "crates/vitric-cli",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.87"
license = "MIT"
authors = ["BlackBearCC"]
repository = "https://github.com/BlackBearCC/vitric"
homepage = "https://github.com/BlackBearCC/vitric"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
