[package]
name = "vitric-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "vitric"
path = "src/main.rs"

[dependencies]
serde_json = { workspace = true }
vitric-ecs = { path = "../vitric-ecs" }
vitric-data = { path = "../vitric-data" }
vitric-rules = { path = "../vitric-rules" }
vitric-script = { path = "../vitric-script" }
vitric-sim = { path = "../vitric-sim" }
vitric-control = { path = "../vitric-control" }
winit = "0.30"
softbuffer = "0.4"
vitric-render = { version = "0.1.0", path = "../vitric-render" }
