[package]
name = "vitric-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "vitric"
path = "src/main.rs"

[dependencies]
serde_json = { workspace = true }
vitric-ecs = { path = "../vitric-ecs" }
vitric-data = { path = "../vitric-data" }
vitric-rules = { path = "../vitric-rules" }
vitric-script = { path = "../vitric-script" }
vitric-sim = { path = "../vitric-sim" }
vitric-control = { path = "../vitric-control" }
winit = "0.30"
softbuffer = "0.4"
vitric-render = { version = "0.1.0", path = "../vitric-render" }
rodio = "0.22.2"
wgpu = "29.0.3"
pollster = "0.4.0"
bytemuck = { version = "1.25.0", features = ["derive"] }
font8x8 = "0.3"

[dev-dependencies]
# 只为单测里离线校验 WGSL（无 GPU 环境也能锁住 shader 不写炸）；版本必须跟 wgpu 同步
naga = { version = "29.0.3", features = ["wgsl-in"] }
