[package]
name = "vitric-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Deterministic, glass-box 2D game engine built for AI agents — CLI, runtime, and control plane"
keywords = ["game-engine", "ai-agents", "deterministic", "2d", "gamedev"]
categories = ["game-engines", "command-line-utilities", "graphics"]
documentation = "https://docs.rs/vitric-cli"
# Not published yet: the CLI depends on the workspace's internal crates, which
# stay unpublished while the pre-1.0 API is unstable. Distribution happens via
# GitHub Releases binaries (see .github/workflows/release.yml).
publish = false

[[bin]]
name = "vitric"
path = "src/main.rs"

[dependencies]
serde_json = { workspace = true }
# 素材和谐化（vitric assets）的 PNG 读写；版本跟 vitric-render 保持一致
png = "0.18"
vitric-ecs = { path = "../vitric-ecs" }
vitric-data = { path = "../vitric-data" }
vitric-rules = { path = "../vitric-rules" }
vitric-script = { path = "../vitric-script" }
vitric-sim = { path = "../vitric-sim" }
vitric-playtest = { path = "../vitric-playtest" }
vitric-control = { path = "../vitric-control" }
winit = "0.30"
softbuffer = "0.4"
vitric-render = { version = "0.2.0", path = "../vitric-render" }
rodio = "0.22.2"
wgpu = "29.0.3"
pollster = "0.4.0"
bytemuck = { version = "1.25.0", features = ["derive"] }
font8x8 = "0.3"
# 运行时 LLM（src/llm.rs）的 HTTP 客户端：同步阻塞 API 正好住在单工作线程里，
# 一个 POST 不值得拖进 tokio；默认 rustls（纯 Rust TLS），windows-gnu 交叉编译无痛
ureq = { version = "3", features = ["json"] }
# 发行打包（src/bundle.rs）的 zlib 压缩：flate2 早已在依赖树里（png 和 ureq 都在用），
# 不引入新依赖家族；默认 miniz_oxide 纯 Rust 后端，windows-gnu 交叉编译无痛
flate2 = "1"

[dev-dependencies]
# 只为单测里离线校验 WGSL（无 GPU 环境也能锁住 shader 不写炸）；版本必须跟 wgpu 同步
naga = { version = "29.0.3", features = ["wgsl-in"] }
# LLM 测试的本地 HTTP 桩服务器（vitric-control 已在用同款，不引入新家族）
tiny_http = "0.12"
