[package]
name = "vitric-control"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tiny_http = "0.12"
vitric-ecs = { path = "../vitric-ecs" }
vitric-data = { path = "../vitric-data" }
vitric-rules = { path = "../vitric-rules" }
vitric-sim = { path = "../vitric-sim" }
vitric-render = { path = "../vitric-render" }
