[package]
name = "vitric-render"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Deterministic CPU rasterizer for the Vitric engine: headless rendering, lighting/shadows/bloom, and semantic frame description"
# Internal implementation crate: not published to crates.io on its own.
publish = false

[dependencies]
serde_json = { workspace = true }
png = "0.18"
vitric-ecs = { path = "../vitric-ecs" }
font8x8 = "0.3"
ab_glyph = "0.2"
