[package]
name = "vitric-rules"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Declarative when-X-then-Y rule engine for Vitric games, with cascade protection"
# Internal implementation crate: not published to crates.io on its own.
publish = false

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
vitric-ecs = { path = "../vitric-ecs" }
vitric-data = { path = "../vitric-data" }
